--- a/css/index.css
+++ b/css/index.css
@@ -28,9 +28,18 @@ body {
     margin: auto;
 }
 
-.logo img {
+/* .logo img {
     width: 100px;
     height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+} */
+
+.logo img {
+    width: 100%;
+    height: 100%;
+    max-width: 100px;
+    max-height: 100px;
     border-radius: 50%;
     object-fit: cover;
 }
